examples-generated/namespaced/workers/v1alpha1/deployment.yaml
apiVersion: workers.upjet-cloudflare.m.upbound.io/v1alpha1
kind: Deployment
metadata:
  annotations:
    meta.upbound.io/example-id: workers/v1alpha1/deployment
  labels:
    testing.upbound.io/example-name: example_workers_deployment
  name: example-workers-deployment
  namespace: crossplane-system
spec:
  forProvider:
    accountId: 023e105f4ecef8ad9ca31a8372d0c353
    annotations:
      workersMessage: Deploy bug fix.
    scriptName: this-is_my_script-01
    strategy: percentage
    versions:
    - percentage: 100
      versionId: 023e105f-2a42-4f8b-a1c1-73f6a2a30c0f
