examples-generated/namespaced/workers/v1alpha1/route.yaml
apiVersion: workers.upjet-cloudflare.m.upbound.io/v1alpha1
kind: Route
metadata:
  annotations:
    meta.upbound.io/example-id: workers/v1alpha1/route
  labels:
    testing.upbound.io/example-name: example_workers_route
  name: example-workers-route
  namespace: crossplane-system
spec:
  forProvider:
    pattern: example.com/*
    script: my-workers-script
    zoneId: 023e105f4ecef8ad9ca31a8372d0c353
